--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.xvitcoder.springmvcangularjs</groupId>
-    <artifactId>spring-mvc-angularjs</artifactId>
+    <groupId>com.isn.xcoder</groupId>
+    <artifactId>VillageAngularJs</artifactId>
     <packaging>war</packaging>
     <version>1.1</version>
-    <name>AngularSpringApp Maven Webapp</name>
+    <name>AngularApp</name>
     <url>http://maven.apache.org</url>
     <dependencies>
 
@@ -42,7 +42,7 @@
 
     </dependencies>
     <build>
-        <finalName>spring-mvc-angularjs</finalName>
+        <finalName>VillageAngularJs</finalName>
 
         <plugins>
             <plugin>
